--- a/first.html
+++ b/first.html
@@ -1,1 +1,12 @@
-hello there this is my first lab of git
+<!Doctype html>
+
+<html>
+  <head>
+    <title>My first lab using git and jenkins</title>
+  </head>
+  <body>
+    <div>
+      <h2>This page has been deployed using jenkins</h2>
+    </div>
+  </body>
+</html>
